--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quidax</title>
-  <link rel="stylesheet" href="../Udemystyles/Quidax.css">
+  <link rel="stylesheet" href="css/Quidax.css">
 </head>
 <body>
   <div class="container">
