--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     Even if the sky is falling or our favorite show is on,we're always here to help.
    </p>
    <div class="container-box">
-    <img class="img-capital" src="../pictures/Screenshot_20250910_100152.jpg">
+    <img class="img-capital" src="Screenshot_20250910_100152.jpg">
     <div>
     <h3 class="Quidax-h3">
       Quidax is licensed by the Securities and Exchange Commission of Nigeria
@@ -126,5 +126,6 @@
    <p class="texts">
     A complete suite of the most helpful cryptocurrency products at your fingertips.
    </p>
+   <!--<img src="https://nynm-quidax-strapi.s3.amazonaws.com/quidax_logo_0b49871396.svg" width="366" height="91" alt="Home" class="styles__LogoImage-sc-hcqy6y-0 cBqDSR">-->
 </body>
 </html>
