--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
     </div>
     </nav>
     <h1 class="buy-header">
-      Buy and sell<br>crypto with ease
+      <span class="line1">Buy and sell crypto with</span> <span class="ease-word">ease</span>
     </h1>
     <p class="quidax-p">
-      Quidax makes it simple to buy and sell cryptocurrency.<br>
+      Quidax makes it simple to buy and sell cryptocurrency.
       Join the squad and get started today.
     </p>
+    <div class="mid-div">
     <input  class="input-mail" type="email" placeholder="Your e-mail" required>
     <button class="started-button">
       Get Started
     </button>
-  </div>
+    </div>
   <div class="main-div">
-    <button class="sub-button">Download on the <br> <span>App Store</span></button>
-    <button class="sub-button">GET IT ON <br> <span>Google Play</span></button>
+    <button class="sub-button1">Download on the <br> <span>App Store</span></button>
+    <button class="sub-button2">GET IT ON <br> <span>Google Play</span></button>
   </div> 
+  </div>
   <h2 class="mid-header">What's the market saying&#63</h2>
    <div class="tabs">
       <span class="active">Spot</span>
@@ -91,7 +93,10 @@
       <p class="see-more">See more markets</p>
     </div>
   </div>
-</style>
+  <img src="image-2.jpg" alt="Quidax">
+  <h1 class="Quidax-info">
+    Why Quidax&#63
+  </h1>
   <p class="texts">
     Depending on where you are, the stress of buying crypto could drive you nuts. We're here to change that.
   </p>
@@ -112,7 +117,7 @@
     Even if the sky is falling or our favorite show is on,we're always here to help.
    </p>
    <div class="container-box">
-    <img class="img-capital" src="Screenshot_20250910_100152.jpg">
+    <img class="img-capital" src="image-1.jpg">
     <div>
     <h3 class="Quidax-h3">
       Quidax is licensed by the Securities and Exchange Commission of Nigeria
