--- a/index.html
+++ b/index.html
@@ -116,25 +116,27 @@
       </div>
   </header>
 </div>
-
+    <div class="container-header">
+      <div class="text-section">
     <h1 class="buy-header">
-      <span class="line1">Buy and sell crypto with</span> <span class="ease-word">ease</span>
+      <span class="line1">Buy and sell <span class="line2">crypto with </span></span> <span class="ease-word">ease</span>
     </h1>
     <p class="quidax-p">
       Quidax makes it simple to buy and sell cryptocurrency.
       Join the squad and get started today.
     </p>
-    <div class="mid-div">
-    <input class="input-mail" type="email" placeholder="Your e-mail" required>
+    <form action="Started.html">
+    <input class="input-mail" type="email" aria-label="email" placeholder="Your e-mail" required>
     <button class="started-button">
       Get Started
     </button>
-    </div>
+  </form>
   <div class="main-div">
     <button class="sub-button1">Download on the <br> <span>App Store</span></button>
     <button class="sub-button2">GET IT ON <br> <span>Google Play</span></button>
-  </div> 
-  <img src="pictures/phone-img.png" alt="phone image">
+  </div>
+  </div>
+  <img src="pictures/phone-img.png" alt="phone image" class="phone-img">
   </div>
   <h2 class="mid-header">What's the market saying&#63</h2>
    <div class="tabs">
@@ -144,6 +146,7 @@
       <input type="text" placeholder="Search for crypto" class="input-search" required>
     </div>
     <div class="market-table">
+
       <div class="table-header">
         <span>NAME</span>
         <span>LAST PRICE</span>
@@ -162,7 +165,6 @@
           <span class="down">▼ -1.20%</span>
         </div>
       </div>
-
       <div class="coin-row">
       <div class="coin-info">
           <img src="ltc.png" alt="LTC" />
