--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quidax Clone</title>
   <link rel="stylesheet" href="css/Quidax.css">
-    <link rel="stylesheet" href="css/NavBar.css">
+  <link rel="stylesheet" href="css/NavBar.css">
 </head>
 <body>
   <header class="nav-bar">
@@ -16,10 +16,9 @@
           <a href="#">Buy <span class="arrow">▼</span></a>
           <ul class="dropdown-menu">
             <li>
-            <img src="pictures/24_7_support_img.svg" alt="image" class="image-nav">
-            <h1>Instant Swap</h1>
-            <p>Buy your favorite <br>cryptocurrencies in two minutes or <br>less</p>
-
+              <img src="pictures/24_7_support_img.svg" alt="image" class="image-nav">
+              <h1>Instant Swap</h1>
+              <p>Buy your favorite <br>cryptocurrencies in two minutes or <br>less</p>
             </li>
           </ul>
         </li>
@@ -27,7 +26,7 @@
           <a href="#">Trade <span class="arrow">▼</span></a>
           <ul class="dropdown-menu">
             <li>
-              <img src="pictures/P2_P_img.png" alt="image"class="image-nav">
+              <img src="pictures/P2_P_img.png" alt="image" class="image-nav">
               <h1>P2P Trading</h1>
               <p>Deposit local currencies and <br>trade crypto at the best prices <br>with verified merchants.</p>
             </li>
@@ -37,9 +36,9 @@
               <p>Access diverse markets with super charged liquidity for your crypto trading needs.</p>
             </li>
             <li>
-            <img src="pictures/get_started_straigh_away_rocket_img.svg" alt="image" class="image-nav">
-            <h1>API</h1>
-            <p>Our API gives you all you <br>need and so much more.</p>
+              <img src="pictures/get_started_straigh_away_rocket_img.svg" alt="image" class="image-nav">
+              <h1>API</h1>
+              <p>Our API gives you all you <br>need and so much more.</p>
             </li>
           </ul>
         </li>
@@ -47,18 +46,18 @@
           <a href="#">Business <span class="arrow">▼</span></a>
           <ul class="dropdown-menu">
             <li>
-            <img src="pictures/OTC_2x_8_img.png" alt="image" class="image-nav">
+              <img src="pictures/OTC_2x_8_img.png" alt="image" class="image-nav">
               <h1>OTC</h1>
               <p>Execute large orders with our <br> premium OTC trading service.</p>
             </li>
             <li>
-            <img src="pictures/launchpad_img.png" alt="image" class="image-nav">
+              <img src="pictures/launchpad_img.png" alt="image" class="image-nav">
               <h1>LaunchPad</h1>
-            <p>List new and existing tokens on <br>Quidax with ease.</p>
+              <p>List new and existing tokens on <br>Quidax with ease.</p>
             </li>
             <li>
               <img src="pictures/Easy_AP_Is_img.png" alt="image" class="image-nav">
-              <h1>API<h1>
+              <h1>API</h1>
               <p>Building crypto powered features with <br>our API.</p>
             </li>
           </ul>
@@ -67,9 +66,9 @@
           <a href="#">Learn <span class="arrow">▼</span></a>
           <ul class="dropdown-menu">
             <li>
-            <img src="pictures/quidax_academy_img.svg" alt="image" class="image-nav"> 
+              <img src="pictures/quidax_academy_img.svg" alt="image" class="image-nav">
               <h1>Quidax Academy</h1>
-               <p>The Quidax Academy will teach <br> you the Basics of Crypto <br> including what it is,how to trade <br>it, and its various use cases.</p>
+              <p>The Quidax Academy will teach <br> you the Basics of Crypto <br> including what it is,how to trade <br>it, and its various use cases.</p>
             </li>
             <li>
               <img src="pictures/blog_03a1e3ec0b.svg" alt="image" class="image-nav">
@@ -115,127 +114,127 @@
         <span></span>
       </div>
   </header>
-</div>
-    <div class="container-header">
-      <div class="text-section">
-    <h1 class="buy-header">
-      <span class="line1">Buy and sell <span class="line2">crypto with </span></span> <span class="ease-word">ease</span>
-    </h1>
-    <p class="quidax-p">
-      Quidax makes it simple to buy and sell cryptocurrency.
-      Join the squad and get started today.
-    </p>
-    <form action="Started.html">
-    <input class="input-mail" type="email" aria-label="email" placeholder="Your e-mail" required>
-    <button class="started-button">
-      Get Started
-    </button>
-  </form>
-  <div class="main-div">
-    <button class="sub-button1">Download on the <br> <span>App Store</span></button>
-    <button class="sub-button2">GET IT ON <br> <span>Google Play</span></button>
-  </div>
-  </div>
-  <img src="pictures/phone-img.png" alt="phone image" class="phone-img">
-  </div>
-  <h2 class="mid-header">What's the market saying&#63</h2>
-   <div class="tabs">
-      <span class="active">Spot</span>
-      <span>Newly listed</span>
-      <span>Top Gainers</span>
-      <input type="text" placeholder="Search for crypto" class="input-search" required>
-    </div>
-    <div class="market-table">
 
+  <div class="container-header">
+    <div class="text-section">
+      <h1 class="buy-header">
+        <span class="line1">Buy and sell</span> <span class="line2">crypto with ease</span>
+      </h1>
+<p class="quidax-p">
+  <span class="merge-paragraphs line1">
+    Quidax makes it simple to buy and sell cryptocurrency.
+  </span>
+  <span class="merge-paragraphs line2">
+    Join the squad and get started today.
+  </span>
+</p>
+<form action="Started.html">
+  <input class="input-mail" type="email" aria-label="email" placeholder="Your e-mail" required>
+    <button class="started-button">Get Started</button>
+</form>
+<div class="main-div">
+  <button class="sub-button1">Download on the <br> <span>App Store</span></button>
+  <button class="sub-button2">GET IT ON <br> <span>Google Play</span></button>
+</div>
+</div>
+  <img src="pictures/phone-img.png" alt="phone image" class="phone-img">
+</div>
+
+  <h2 class="mid-header">What's the market saying&#63;</h2>
+  <div class="tabs">
+    <span class="active">Spot</span>
+    <span>Newly listed</span>
+    <span>Top Gainers</span>
+    <input type="text" placeholder="Search for crypto" class="input-search" required>
+  </div>
+
+  <!-- ✅ Updated Market Table -->
+  <div class="market-section">
+    <div class="market-table">
       <div class="table-header">
         <span>NAME</span>
+        <span>COIN PAIR</span>
         <span>LAST PRICE</span>
+        <span>24H CHANGE</span>
+        <span>TRADE</span>
       </div>
 
       <div class="coin-row">
         <div class="coin-info">
-          <img src="eth.png" alt="ETH" />
+          <img src="eth.png" alt="ETH">
           <div>
-            <strong>ETH</strong> <br />
-            <small>Ethereum</small>
+            <strong>ETH</strong> <small>Ethereum</small>
           </div>
         </div>
-        <div class="coin-price">
-          <span>USDT 4,319.37</span>
-          <span class="down">▼ -1.20%</span>
-        </div>
-      </div>
-      <div class="coin-row">
-      <div class="coin-info">
-          <img src="ltc.png" alt="LTC" />
-          <div>
-            <strong>LTC</strong> <br />
-            <small>Litecoin</small>
-          </div>
-        </div>
-        <div class="coin-price">
-          <span>USDT 111.55</span>
-          <span class="down">▼ -2.39%</span>
-        </div>
+        <span class="coin-pair">/ USDT</span>
+        <span class="coin-price">USDT 3,951.60</span>
+        <span class="coin-change up">▲ 2.04%</span>
+        <button class="buy-btn">Buy</button>
       </div>
 
       <div class="coin-row">
         <div class="coin-info">
-          <img src="sol.png" alt="SOL" />
+          <img src="ltc.png" alt="LTC">
           <div>
-            <strong>SOL</strong> <br />
-            <small>Solana</small>
+            <strong>LTC</strong> <small>Litecoin</small>
           </div>
         </div>
-        <div class="coin-price">
-          <span>USDT 220.92</span>
-          <span class="up">▲ 0.80%</span>
-        </div>
+        <span class="coin-pair">/ USDT</span>
+        <span class="coin-price">USDT 92.88</span>
+        <span class="coin-change down">▼ -0.97%</span>
+        <button class="buy-btn">Buy</button>
       </div>
+
+      <div class="coin-row">
+        <div class="coin-info">
+          <img src="sol.png" alt="SOL">
+          <div>
+            <strong>SOL</strong> <small>Solana</small>
+          </div>
+        </div>
+        <span class="coin-pair">/ USDT</span>
+        <span class="coin-price">USDT 191.09</span>
+        <span class="coin-change up">▲ 1.35%</span>
+        <button class="buy-btn">Buy</button>
+      </div>
+
       <p class="see-more">See more markets</p>
     </div>
   </div>
+  <!-- ✅ End Market Table -->
+
   <div class="container-menu">
-  <img src="pictures/image-2.jpg"  class="img-box" alt="Quidax">
+    <img src="pictures/image-2.jpg" class="img-box" alt="Quidax">
   </div>
-  <h1 class="Quidax-info">
-    Why Quidax&#63
-  </h1>
+
+  <h1 class="Quidax-info">Why Quidax&#63;</h1>
   <p class="text">
     Depending on where you are, the stress of buying crypto could drive you nuts. We're here to change that.
   </p>
+
   <h2 class="mid-header">Fast Transactions</h2>
-  <p class="text">
-   No long steps here,just straightforward ways to trade crypto.
-   </p>
-   <h2 class="mid-header">Safe and Secure</h2>
-  <p class="text">
-   You can rest easy knowing that your crypto is safe with us anytime!
-   </p>
-   <h2 class="mid-header">Test of Options</h2>
-  <p class ="text">
-    We list new cryptocurrencies regularly so that you can buy them easily.
-   </p>
-      <h2 class="mid-header">24/7 Support</h2>
-  <p class="text">
-    Even if the sky is falling or our favorite show is on,we're always here to help.
-   </p>
-   <div class="container-box">
-    <img class="img-capital" src="pictures/image-1.jpg">
+  <p class="text">No long steps here, just straightforward ways to trade crypto.</p>
+
+  <h2 class="mid-header">Safe and Secure</h2>
+  <p class="text">You can rest easy knowing that your crypto is safe with us anytime!</p>
+
+  <h2 class="mid-header">Test of Options</h2>
+  <p class="text">We list new cryptocurrencies regularly so that you can buy them easily.</p>
+
+  <h2 class="mid-header">24/7 Support</h2>
+  <p class="text">Even if the sky is falling or our favorite show is on, we're always here to help.</p>
+
+  <div class="container-box">
+    <img class="img-capital" src="pictures/image-1.jpg" alt="Quidax Capital">
     <div>
-    <h3 class="Quidax-h3">
-      Quidax is licensed by the Securities and Exchange Commission of Nigeria
-    </h3>
-    <p class="Quidax-p">We're the first crypto exchange to receive a provisional Digital Exchange license by Nigeria's SEC.</p>
-   </div>
-   </div>
-   <h2 class="mid-headers">
-    Get familiar with our products
-   </h2>
-   <p class="texts">
-    A complete suite of the most helpful cryptocurrency products at your fingertips.
-   </p>
-   <!--<img src="https://nynm-quidax-strapi.s3.amazonaws.com/quidax_logo_0b49871396.svg" width="366" height="91" alt="Home" class="styles__LogoImage-sc-hcqy6y-0 cBqDSR">-->
-   <script src="script.js"></script>
+      <h3 class="Quidax-h3">Quidax is licensed by the Securities and Exchange Commission of Nigeria</h3>
+      <p class="Quidax-p">We're the first crypto exchange to receive a provisional Digital Exchange license by Nigeria's SEC.</p>
+    </div>
+  </div>
+
+  <h2 class="mid-headers">Get familiar with our products</h2>
+  <p class="texts">A complete suite of the most helpful cryptocurrency products at your fingertips.</p>
+
+  <script src="script.js"></script>
 </body>
 </html>
