--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <button class="sub-button2">GET IT ON <br> <span>Google Play</span></button>
 </div>
 </div>
-  <img src="pictures/phone-img.png" alt="phone image" class="phone-img">
+  <img src="pictures/phone-img.png" alt="Mobile phone screen showing crypto currencies" class="phone-img">
 </div>
 
   <h2 class="mid-header">What's the market saying&#63;</h2>
@@ -224,13 +224,18 @@
   <h2 class="mid-header">24/7 Support</h2>
   <p class="text">Even if the sky is falling or our favorite show is on, we're always here to help.</p>
 
-  <div class="container-box">
-    <img class="img-capital" src="pictures/image-1.jpg" alt="Quidax Capital">
-    <div>
-      <h3 class="Quidax-h3">Quidax is licensed by the Securities and Exchange Commission of Nigeria</h3>
-      <p class="Quidax-p">We're the first crypto exchange to receive a provisional Digital Exchange license by Nigeria's SEC.</p>
-    </div>
+<div class="container-box">
+  <img class="img-capital" src="pictures/image-1.jpg" alt="Quidax Capital">
+
+  <div class="text-div">
+    <h3 class="Quidax-h3">
+      Quidax is licensed by the Securities and Exchange Commission of Nigeria
+    </h3>
+    <p class="Quidax-p">
+      We're the first crypto exchange to receive a provisional Digital Exchange license by Nigeria's SEC.
+    </p>
   </div>
+</div>
 
   <h2 class="mid-headers">Get familiar with our products</h2>
   <p class="texts">A complete suite of the most helpful cryptocurrency products at your fingertips.</p>
