--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Quidax Clone</title>
   <link rel="stylesheet" href="css/Quidax.css">
   <link rel="stylesheet" href="css/NavBar.css">
+  <link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
   <header class="nav-bar">
@@ -118,7 +119,7 @@
   <div class="container-header">
     <div class="text-section">
       <h1 class="buy-header">
-        <span class="line1">Buy and sell</span> <span class="line2">crypto with ease</span>
+        <span class="line1">Buy and sell</span> <span class="line2">crypto with </span> <span class="ease-word">ease</span>
       </h1>
 <p class="quidax-p">
   <span class="merge-paragraphs line1">
@@ -139,6 +140,21 @@
 </div>
   <img src="pictures/phone-img.png" alt="Mobile phone screen showing crypto currencies" class="phone-img">
 </div>
+<section class="scroll-section">
+  <div class="scroll-wrapper">
+    <div class="scroll-content">
+      <img src="pictures/Webcard_bea9de911c.png" class="box purple">
+      <img src="pictures/Quidax_io_Migration_Web_notice_23ac76d8f6.png" class="box yellow">
+      <img src="pictures/Welcome-img.png" class="box pink">
+      <img src="pictures/Quidax_X_Tether_Web_Notice_5ba4d61c60.png" class="box violet">
+      <img src="pictures/Buy_and_Sell_With_USDT_db7f1d7089.png" class="box purple">
+      <img src="pictures/Desktop_290x140_3_0027bb8ef7.png" class="box yellow">
+      <img src="pictures/bitcoin-img.png" class="box pink">
+      <img src="pictures/Whatsapp_Channel_web_notice_067da0b04c.png" class="box violet">
+      <img src="pictures/BTC_and_DOGE_e4cc1ede0b.png" class="box violet">
+    </div>
+  </div>
+</section>
 
   <h2 class="mid-header">What's the market saying&#63;</h2>
   <div class="tabs">
@@ -153,10 +169,10 @@
     <div class="market-table">
       <div class="table-header">
         <span>NAME</span>
-        <span>COIN PAIR</span>
-        <span>LAST PRICE</span>
-        <span>24H CHANGE</span>
-        <span>TRADE</span>
+        <span class="coin-pair">COIN PAIR</span>
+        <span class="last-price">LAST PRICE</span>
+        <span class="change">24H CHANGE</span>
+        <span class="trade">TRADE</span>
       </div>
 
       <div class="coin-row">
@@ -205,13 +221,12 @@
 
   <div class="container-menu">
     <img src="pictures/image-2.jpg" class="img-box" alt="Quidax">
-  </div>
-
+  <div class="texts-div">
   <h1 class="Quidax-info">Why Quidax&#63;</h1>
   <p class="text">
     Depending on where you are, the stress of buying crypto could drive you nuts. We're here to change that.
   </p>
-
+  <div class="grid-templates">
   <h2 class="mid-header">Fast Transactions</h2>
   <p class="text">No long steps here, just straightforward ways to trade crypto.</p>
 
@@ -223,7 +238,9 @@
 
   <h2 class="mid-header">24/7 Support</h2>
   <p class="text">Even if the sky is falling or our favorite show is on, we're always here to help.</p>
-
+</div>
+</div>
+</div>
 <div class="container-box">
   <img class="img-capital" src="pictures/image-1.jpg" alt="Quidax Capital">
 
