--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
+  <div class="container">
   <header class="nav-bar">
     <div class="quidax-header">Quidax</div>
     <nav class="nav-links" id="nav-links">
@@ -108,7 +109,9 @@
 
     <div class="right-section">
       <div class="sign-li">Sign in</div>
+      <form action="Started.html">
       <button class="get-button">Get Started</button>
+      </form>
       <div class="menu-icon" id="menu-icon">
         <span></span>
         <span></span>
@@ -218,7 +221,7 @@
     </div>
   </div>
   <!-- ✅ End Market Table -->
-
+  </div>
   <div class="container-menu">
     <img src="pictures/image-2.jpg" class="img-box" alt="Quidax">
   <div class="texts-div">
@@ -256,7 +259,6 @@
 
   <h2 class="mid-headers">Get familiar with our products</h2>
   <p class="texts">A complete suite of the most helpful cryptocurrency products at your fingertips.</p>
-
   <script src="script.js"></script>
 </body>
 </html>
