Update email input and button for login functionality

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
   </span>
 </p>
 <form action="Started.html">
-  <input class="input-mail" type="email" aria-label="email" placeholder="Your e-mail" required>
-    <button class="started-button">Get Started</button>
+  <input class="input-mail" id="loginEmail" type="email" aria-label="email" placeholder="Your e-mail" required>
+    <button onclick="login()" class="started-button">Get Started</button>
 </form>
 <div class="main-div">
   <button class="sub-button1">Download on the <br> <span>App Store</span></button>
