--- a/Started.html
+++ b/Started.html
@@ -35,7 +35,7 @@
 
     <form id="signupForm">
       <label>Email address</label>
-      <input type="email" placeholder="you@example.com" aria-label="email" required>
+      <input type="email" id="createEmail" placeholder="you@example.com" aria-label="email" required>
 
       <label>Password</label>
       <div class="password-wrapper">
